# wgsl-gpu

./: Cargo.toml  example.wgsl
cons/: Cargo.toml  build.rs
cons/src/: main.rs
example/: Cargo.toml
example/consumer/: Cargo.toml  build.rs
example/consumer/src/: main.rs
example/shaders/: Cargo.toml
example/shaders-dep/: Cargo.toml
example/shaders-dep/src/: lib.rs
example/shaders/src/: lib.rs
shaders/: Cargo.toml
shaders-dep/src/: lib.rs
shaders/src/: lib.rs
wgsl-gpu/: Cargo.toml
wgsl-gpu-macros/: Cargo.toml
wgsl-gpu-macros/src/: arguments.rs  entry.rs  lib.rs
wgsl-gpu/src/: lib.rs
