[package]
name = "shaders"
version.workspace = true
edition.workspace = true

[features]
native = ["wgpu"]

[lints]
workspace = true

[dependencies]
shaders-dep = { path = "../shaders-dep" }

wgsl-gpu.workspace = true

wgpu = { workspace = true, optional = true }
spirv-std.workspace = true
glam.workspace = true
bytemuck.workspace = true
